--- a/slides/ode_notes.html
+++ b/slides/ode_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgf6fc9f0">
-<h2 id="orgf6fc9f0">Navigation instructions</h2>
+<section id="slide-orgf3ddff8">
+<h2 id="orgf3ddff8">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -74,8 +74,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org2ada918">
-<h2 id="org2ada918">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org3a1f02d">
+<h2 id="org3a1f02d">CP213: Applied mathematics and problem solving</h2>
 <h2>Ordinary differential equations</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -130,8 +130,8 @@ We have already encountered these types of equations
 </section>
 </section>
 <section>
-<section id="slide-org0c78b9d" data-audio-src="ode/overview.ogg">
-<h2 id="org0c78b9d">Overview</h2>
+<section id="slide-org25433c2" data-audio-src="ode/overview.ogg">
+<h2 id="org25433c2">Overview</h2>
 <aside class="notes">
 nil
 </aside>
@@ -140,8 +140,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org5037a44">
-<h2 id="org5037a44">First order differential equations</h2>
+<section id="slide-org2179cfb">
+<h2 id="org2179cfb">First order differential equations</h2>
 <div>
 \begin{align*}
 f\left(\frac{dy}{dx}, y, x\right) &= 0
@@ -156,8 +156,8 @@ initial condition: \(y(x_0)=y_0\)
 </section>
 </section>
 <section>
-<section id="slide-org64c09c7">
-<h2 id="org64c09c7">Separable</h2>
+<section id="slide-orgeed3b10">
+<h2 id="orgeed3b10">Separable</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33521&amp;code=cD~cIPnoERomtecAOdhGOIbDGWQ7Rny" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -178,8 +178,8 @@ integral.
 </section>
 </section>
 <section>
-<section id="slide-org1eb607e">
-<h2 id="org1eb607e">Homogeneous</h2>
+<section id="slide-orga5c2e6c">
+<h2 id="orga5c2e6c">Homogeneous</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33520&amp;code=d4~HJvDxTtp8FQvi9fESlmiLWlwSuPI" frameborder="0" allowfullscreen></iframe>
 
 
@@ -203,8 +203,8 @@ of the form given here, where the derivative of the
 </section>
 </section>
 <section>
-<section id="slide-org0bb4c57">
-<h2 id="org0bb4c57">Linear</h2>
+<section id="slide-orgced8bf2">
+<h2 id="orgced8bf2">Linear</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33509&amp;code=d5~ikLfhSEIwyJSG3Gh7QFRy29XBPq5" frameborder="0" allowfullscreen></iframe>
 
 
@@ -235,8 +235,8 @@ Consequently, we need an alternative method to solve them.
 </section>
 </section>
 <section>
-<section id="slide-orge64b254">
-<h2 id="orge64b254">Integrating factor</h2>
+<section id="slide-org2502b5a">
+<h2 id="org2502b5a">Integrating factor</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33522&amp;code=cK~LFSfiWqtv4klI5EszIm0M4uoP4VI" frameborder="0" allowfullscreen></iframe>
 
 
@@ -297,15 +297,15 @@ e^{P(x)} y'(x) + e^{P(x)} p(x) y(x) &= f(x) e^{P(x)}
 </section>
 </section>
 <section>
-<section id="slide-orgdcd2e95">
-<h2 id="orgdcd2e95">Second order differential equations</h2>
+<section id="slide-org3e89b8b">
+<h2 id="org3e89b8b">Second order differential equations</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34040&amp;code=d5~ilL7hQELwFJNG4Gj7OFSy09VBNqc" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-orgbfc9367">
-<h2 id="orgbfc9367">Linear</h2>
+<section id="slide-org5520a3a">
+<h2 id="org5520a3a">Linear</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34041&amp;code=cK~LGS7iUqtuYktHYEzzLlXMbunP4VH" frameborder="0" allowfullscreen></iframe>
 
 
@@ -320,8 +320,8 @@ second order differential equations.
 </section>
 </section>
 <section>
-<section id="slide-org935feba">
-<h2 id="org935feba">Linear equations with constant coefficients</h2>
+<section id="slide-org3571b10">
+<h2 id="org3571b10">Linear equations with constant coefficients</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34044&amp;code=d3~fWfTNRi6BJXeLvGbLPTS8RxhhRo0" frameborder="0" allowfullscreen></iframe>
 
 
@@ -336,29 +336,28 @@ In this module, we will limit our
 </section>
 </section>
 <section>
-<section id="slide-orgb8be5a8">
-<h2 id="orgb8be5a8">Particular solutions: Variation of parameters</h2>
+<section id="slide-org6589ba9">
+<h2 id="org6589ba9">Particular solutions: Variation of parameters</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34045&amp;code=cU~6pOCioxEWr6AgsFnMkWCepkcIqfl" frameborder="0" allowfullscreen></iframe>
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgbb3d28a">
-<h2 id="orgbb3d28a">Particular solutions: Guessing</h2>
-
-
+<section id="slide-org4eb393f">
+<h2 id="org4eb393f">Example solution</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-orge5a29fe">
-<h2 id="orge5a29fe">coupled first order differential equations</h2>
+<section id="slide-org8275c12">
+<h2 id="org8275c12">coupled first order differential equations</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-orgecce4ff">
-<h2 id="orgecce4ff">Summary</h2>
+<section id="slide-orgf4425b7">
+<h2 id="orgf4425b7">Summary</h2>
 <aside class="notes">
 nil
 </aside>
