--- a/slides/ode_notes.html
+++ b/slides/ode_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org5459fda">
-<h2 id="org5459fda">Navigation instructions</h2>
+<section id="slide-org294a8b9">
+<h2 id="org294a8b9">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -74,8 +74,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org91079ac">
-<h2 id="org91079ac">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orga38bc2d">
+<h2 id="orga38bc2d">CP213: Applied mathematics and problem solving</h2>
 <h2>Ordinary differential equations</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -130,8 +130,8 @@ We have already encountered these types of equations
 </section>
 </section>
 <section>
-<section id="slide-org61ef9b5" data-audio-src="ode/overview.ogg">
-<h2 id="org61ef9b5">Overview</h2>
+<section id="slide-org4570e16" data-audio-src="ode/overview.ogg">
+<h2 id="org4570e16">Overview</h2>
 <aside class="notes">
 nil
 </aside>
@@ -140,8 +140,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org7e76361">
-<h2 id="org7e76361">First order differential equations</h2>
+<section id="slide-org24403aa">
+<h2 id="org24403aa">First order differential equations</h2>
 <div>
 \begin{align*}
 f\left(\frac{dy}{dx}, y, x\right) &= 0
@@ -156,8 +156,8 @@ initial condition: \(y(x_0)=y_0\)
 </section>
 </section>
 <section>
-<section id="slide-orgbe460cf">
-<h2 id="orgbe460cf">Separable</h2>
+<section id="slide-org7fc8537">
+<h2 id="org7fc8537">Separable</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33521&amp;code=cD~cIPnoERomtecAOdhGOIbDGWQ7Rny" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -178,8 +178,8 @@ integral.
 </section>
 </section>
 <section>
-<section id="slide-org8eabae3">
-<h2 id="org8eabae3">Homogeneous</h2>
+<section id="slide-orgb65b553">
+<h2 id="orgb65b553">Homogeneous</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33520&amp;code=d4~HJvDxTtp8FQvi9fESlmiLWlwSuPI" frameborder="0" allowfullscreen></iframe>
 
 
@@ -203,8 +203,8 @@ of the form given here, where the derivative of the
 </section>
 </section>
 <section>
-<section id="slide-org7a2350d">
-<h2 id="org7a2350d">Linear</h2>
+<section id="slide-orgef16237">
+<h2 id="orgef16237">Linear</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33509&amp;code=d5~ikLfhSEIwyJSG3Gh7QFRy29XBPq5" frameborder="0" allowfullscreen></iframe>
 
 
@@ -235,8 +235,8 @@ Consequently, we need an alternative method to solve them.
 </section>
 </section>
 <section>
-<section id="slide-orgb3baca3">
-<h2 id="orgb3baca3">Integrating factor</h2>
+<section id="slide-org3ee4a2c">
+<h2 id="org3ee4a2c">Integrating factor</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33522&amp;code=cK~LFSfiWqtv4klI5EszIm0M4uoP4VI" frameborder="0" allowfullscreen></iframe>
 
 
@@ -297,15 +297,15 @@ e^{P(x)} y'(x) + e^{P(x)} p(x) y(x) &= f(x) e^{P(x)}
 </section>
 </section>
 <section>
-<section id="slide-orge2e0d19">
-<h2 id="orge2e0d19">Second order differential equations</h2>
+<section id="slide-orgc317d06">
+<h2 id="orgc317d06">Second order differential equations</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34040&amp;code=d5~ilL7hQELwFJNG4Gj7OFSy09VBNqc" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org59a78ea">
-<h2 id="org59a78ea">Linear</h2>
+<section id="slide-orgb9496cd">
+<h2 id="orgb9496cd">Linear</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34041&amp;code=cK~LGS7iUqtuYktHYEzzLlXMbunP4VH" frameborder="0" allowfullscreen></iframe>
 
 
@@ -320,8 +320,8 @@ second order differential equations.
 </section>
 </section>
 <section>
-<section id="slide-org283448d">
-<h2 id="org283448d">Linear equations with constant coefficients</h2>
+<section id="slide-org1977785">
+<h2 id="org1977785">Linear equations with constant coefficients</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34044&amp;code=d3~fWfTNRi6BJXeLvGbLPTS8RxhhRo0" frameborder="0" allowfullscreen></iframe>
 
 
@@ -336,29 +336,29 @@ In this module, we will limit our
 </section>
 </section>
 <section>
-<section id="slide-org40b9b12">
-<h2 id="org40b9b12">Particular solutions: Variation of parameters</h2>
+<section id="slide-orgb3d5940">
+<h2 id="orgb3d5940">Particular solutions: Variation of parameters</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34045&amp;code=cU~6pOCioxEWr6AgsFnMkWCepkcIqfl" frameborder="0" allowfullscreen></iframe>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org02d547c">
-<h2 id="org02d547c">Example solution</h2>
+<section id="slide-org4c435ad">
+<h2 id="org4c435ad">Example solution</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34046&amp;code=cV~ydd2TzIZtkQZEjeVSUoXRA8yrNH2" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org24fdce9">
-<h2 id="org24fdce9">coupled first order differential equations</h2>
+<section id="slide-orgde77f2d">
+<h2 id="orgde77f2d">coupled first order differential equations</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-orgf702a5e">
-<h2 id="orgf702a5e">Summary</h2>
+<section id="slide-orgf0c7e61">
+<h2 id="orgf0c7e61">Summary</h2>
 <ul>
 <li>First order differential equations
 <ul>
