--- a/slides/ode_notes.html
+++ b/slides/ode_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgcf68e04">
-<h2 id="orgcf68e04">Navigation instructions</h2>
+<section id="slide-orgb4aeada">
+<h2 id="orgb4aeada">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -74,8 +74,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orga751896">
-<h2 id="orga751896">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org608dc82">
+<h2 id="org608dc82">CP213: Applied mathematics and problem solving</h2>
 <h2>Ordinary differential equations</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -130,8 +130,8 @@ We have already encountered these types of equations
 </section>
 </section>
 <section>
-<section id="slide-org902fdd7" data-audio-src="ode/overview.ogg">
-<h2 id="org902fdd7">Overview</h2>
+<section id="slide-orgba1ff3d" data-audio-src="ode/overview.ogg">
+<h2 id="orgba1ff3d">Overview</h2>
 <aside class="notes">
 nil
 </aside>
@@ -140,8 +140,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org1e014cf">
-<h2 id="org1e014cf">First order differential equations</h2>
+<section id="slide-orgda5740b">
+<h2 id="orgda5740b">First order differential equations</h2>
 <div>
 \begin{align*}
 f\left(\frac{dy}{dx}, y, x\right) &= 0
@@ -156,8 +156,8 @@ initial condition: \(y(x_0)=y_0\)
 </section>
 </section>
 <section>
-<section id="slide-org4e28e43">
-<h2 id="org4e28e43">Separable</h2>
+<section id="slide-orgbe63c20">
+<h2 id="orgbe63c20">Separable</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33521&amp;code=cD~cIPnoERomtecAOdhGOIbDGWQ7Rny" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -178,8 +178,8 @@ integral.
 </section>
 </section>
 <section>
-<section id="slide-org238e9c4">
-<h2 id="org238e9c4">Homogeneous</h2>
+<section id="slide-org3b8ec22">
+<h2 id="org3b8ec22">Homogeneous</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33520&amp;code=d4~HJvDxTtp8FQvi9fESlmiLWlwSuPI" frameborder="0" allowfullscreen></iframe>
 
 
@@ -203,8 +203,8 @@ of the form given here, where the derivative of the
 </section>
 </section>
 <section>
-<section id="slide-org1f13728">
-<h2 id="org1f13728">Linear</h2>
+<section id="slide-org78602c9">
+<h2 id="org78602c9">Linear</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33509&amp;code=d5~ikLfhSEIwyJSG3Gh7QFRy29XBPq5" frameborder="0" allowfullscreen></iframe>
 
 
@@ -235,8 +235,8 @@ Consequently, we need an alternative method to solve them.
 </section>
 </section>
 <section>
-<section id="slide-orgb5f2520">
-<h2 id="orgb5f2520">Integrating factor</h2>
+<section id="slide-org21911b5">
+<h2 id="org21911b5">Integrating factor</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=33522&amp;code=cK~LFSfiWqtv4klI5EszIm0M4uoP4VI" frameborder="0" allowfullscreen></iframe>
 
 
@@ -297,15 +297,15 @@ e^{P(x)} y'(x) + e^{P(x)} p(x) y(x) &= f(x) e^{P(x)}
 </section>
 </section>
 <section>
-<section id="slide-org4ebadc4">
-<h2 id="org4ebadc4">Second order differential equations</h2>
+<section id="slide-org8fcf5a0">
+<h2 id="org8fcf5a0">Second order differential equations</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34040&amp;code=d5~ilL7hQELwFJNG4Gj7OFSy09VBNqc" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-orgb4f5a6d">
-<h2 id="orgb4f5a6d">Linear</h2>
+<section id="slide-org70f3c43">
+<h2 id="org70f3c43">Linear</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34041&amp;code=cK~LGS7iUqtuYktHYEzzLlXMbunP4VH" frameborder="0" allowfullscreen></iframe>
 
 
@@ -320,8 +320,8 @@ second order differential equations.
 </section>
 </section>
 <section>
-<section id="slide-org51eff0e">
-<h2 id="org51eff0e">Linear equations with constant coefficients</h2>
+<section id="slide-org7a0d7bb">
+<h2 id="org7a0d7bb">Linear equations with constant coefficients</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34044&amp;code=d3~fWfTNRi6BJXeLvGbLPTS8RxhhRo0" frameborder="0" allowfullscreen></iframe>
 
 
@@ -336,31 +336,31 @@ In this module, we will limit our
 </section>
 </section>
 <section>
-<section id="slide-org04034c3">
-<h2 id="org04034c3">Particular solutions: Variation of parameters</h2>
+<section id="slide-orga1f6974">
+<h2 id="orga1f6974">Particular solutions: Variation of parameters</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34045&amp;code=cU~6pOCioxEWr6AgsFnMkWCepkcIqfl" frameborder="0" allowfullscreen></iframe>
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgd1a41b5">
-<h2 id="orgd1a41b5">Example solution</h2>
+<section id="slide-orgd988866">
+<h2 id="orgd988866">Example solution</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34046&amp;code=cV~ydd2TzIZtkQZEjeVSUoXRA8yrNH2" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org7d3eb67">
-<h2 id="org7d3eb67">Numerical solution of second order ODEs: Initial value problems</h2>
+<section id="slide-org5c8d3c7">
+<h2 id="org5c8d3c7">Numerical solution of second order ODEs: Initial value problems</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34510&amp;code=cU~6pODivxAWo6tgmFmMpWveskfIufq" frameborder="0" allowfullscreen></iframe>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org5e67826">
-<h2 id="org5e67826">Coupled first order differential equations</h2>
+<section id="slide-org43402a4">
+<h2 id="org43402a4">Coupled first order differential equations</h2>
 <div>
 \begin{align*}
 \frac{dy_0}{dx} &= f_0(y_0, y_1, x)
@@ -382,16 +382,26 @@ for more details.
 </section>
 </section>
 <section>
-<section id="slide-org0c443cf">
-<h2 id="org0c443cf">Numerical solution of second order ODEs: Boundary value problems</h2>
+<section id="slide-org542ee8b">
+<h2 id="org542ee8b">Numerical solution of second order ODEs: Boundary value problems</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=34515&amp;code=cT~vOz2yvmgyldbJNeIFKCTsvvP7WER" frameborder="0" allowfullscreen></iframe>
+
+</section>
+</section>
+<section>
+<section id="slide-org00e35bb">
+<h2 id="org00e35bb">Using <code>odeint</code> to solve coupled first order differential equations</h2>
+<p>
+Please see the Jupyter notebook <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/ode-odeint.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/ode-odeint.ipynb">colab</a>
+for more details.
+</p>
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgf7a6003">
-<h2 id="orgf7a6003">Summary</h2>
+<section id="slide-org0d6248e">
+<h2 id="org0d6248e">Summary</h2>
 <ul>
 <li>First order differential equations
 <ul>
