updates to introduction slides

--- a/slides/intro_notes-2021.html
+++ b/slides/intro_notes-2021.html
@@ -47,8 +47,8 @@
 
 
 <section>
-<section id="slide-org5704e91">
-<h2 id="org5704e91">Navigation instructions</h2>
+<section id="slide-org73657a5">
+<h2 id="org73657a5">Navigation instructions</h2>
 <ul>
 <li>Press <a class="hide-on-pdf" onclick="document.location =
   '?print-pdf';" id="PrintButton"><i class="fa fa-print"></i></a> to
@@ -62,8 +62,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orgd0ab6cc">
-<h2 id="orgd0ab6cc">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org4832063">
+<h2 id="org4832063">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -87,8 +87,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-orgabd626b">
-<h2 id="orgabd626b">Overview</h2>
+<section id="slide-orgbf58460">
+<h2 id="orgbf58460">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Umair Jamal, Anthony Shek, and Tom Stavert</li>
@@ -118,7 +118,7 @@ of the module aims and contents.
 </p>
 
 <p>
-CP213 runs over two semesters.  The lectures for this module will be
+CP213 runs over two semesters.  The lecturers for this module will be
 myself and Abdul Sharif.   Umair Jamal, Anthony Shek, and Tom Stavert
 will be your demonstrators.
 </p>
@@ -133,18 +133,18 @@ found on the Myplace site for the module.
 </p>
 
 <p>
-The Monday sessions, which start at 10.00 am, will be mainly to
-deliver lectures of new material, while the Thursday sessions, which
-start at 1.00 pm, will be mainly be devoted to answering any questions
+The Tuesday sessions, which start at 11.00 am, will be mainly to
+deliver lectures of new material, while the Friday sessions, which
+start at 3.00 pm, will be mainly be devoted to answering any questions
 that you may have regarding the course.  Both these sessions will last
 roughly an hour.
 </p>
 
 <p>
 At the beginning of each week, you will be given a tutorial sheet.
-Tutorial sessions will be held on Fridays from 3.00 to 5.00 to give
-you an opportunity to work in groups on the tutorial problems, as well
-as get help from the demonstrators and the lecturers.  
+Tutorial sessions will be held on Wednesdays from 11.00 to 1.00 pm to
+give you an opportunity to work in groups on the tutorial problems, as
+well as get help from the demonstrators and the lecturers.
 </p>
 
 <p>
@@ -166,8 +166,8 @@ course.
 </section>
 </section>
 <section>
-<section id="slide-orgcde5bee">
-<h2 id="orgcde5bee">Components of assessment</h2>
+<section id="slide-orgbab2abd">
+<h2 id="orgbab2abd">Components of assessment</h2>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -217,16 +217,16 @@ course.
 <aside class="notes">
 <p>
 There are two components of assessment for this module: a class test,
-worth 20% of the overall module mark, to be held in week 10 of
+worth 20% of the overall module mark, to be held in week 11 of
 semester 1, and an exam, worth 80% of the module mark, to be held in
 the semester 2 examination period.
 </p>
 
 <p>
-The class test will be held on Friday November 27 and start at 3.00
-pm.  It will replace the normally scheduled tutorial workshop.  The
-test will last one hour, and more details will be provided later in
-the semester.
+The class test will be held on Wednesday December 01, and start at
+11.00 am.  It will replace the normally scheduled tutorial workshop.
+The test will last one hour, and more details will be provided later
+in the semester.
 </p>
 
 <p>
@@ -241,8 +241,8 @@ semester 2.
 </section>
 </section>
 <section>
-<section id="slide-orgd4d244e">
-<h2 id="orgd4d244e">Key learning objectives</h2>
+<section id="slide-org492d024">
+<h2 id="org492d024">Key learning objectives</h2>
 <ul>
 <li>Problem solving</li>
 <li>Mathematics</li>
@@ -305,8 +305,8 @@ solved analytically.
 </section>
 </section>
 <section>
-<section id="slide-org7972b0c">
-<h2 id="org7972b0c">Prerequisites</h2>
+<section id="slide-org3820b1d">
+<h2 id="org3820b1d">Prerequisites</h2>
 <ul>
 <li>CP101: Basic Principles in Chemical Engineering</li>
 <li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
@@ -362,8 +362,8 @@ that you are confident that you understand them thoroughly.
 </section>
 </section>
 <section>
-<section id="slide-org7b6505a">
-<h2 id="org7b6505a">Schedule</h2>
+<section id="slide-org3f3439b">
+<h2 id="org3f3439b">Schedule</h2>
 <ul>
 <li>Weeks 1-2: Python and its applications</li>
 <li>Weeks 3-5: Differential balances</li>
@@ -427,13 +427,13 @@ will be held on the Wednesday of week 11.
 </section>
 </section>
 <section>
-<section id="slide-orgf068e45">
-<h2 id="orgf068e45">Format</h2>
+<section id="slide-org3aa6b1c">
+<h2 id="org3aa6b1c">Format</h2>
 <ul>
 <li>tutorial worksheets
 <ul>
 <li>released at the beginning of the week</li>
-<li>uploaded to Myplace by Monday at midnight</li>
+<li>uploaded to Myplace by midnight on Monday</li>
 <li>fully worked model solutions released on Tuesday</li>
 <li>peer assessment of two other tutorials</li>
 
@@ -539,8 +539,8 @@ able to use these tools you have developed in your further career.
 </section>
 </section>
 <section>
-<section id="slide-org6e01aa5">
-<h2 id="org6e01aa5">Learning resources</h2>
+<section id="slide-orgcb87e24">
+<h2 id="orgcb87e24">Learning resources</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a> 
 <ul>
@@ -549,7 +549,7 @@ able to use these tools you have developed in your further career.
 </ul></li>
 <li><a href="https://strath.zoom.us/j/97497583844">Zoom</a>
 <ul>
-<li><a href="https://strath.zoom.us/j/97497583844">https://strath.zoom.us/j/97497583844</a></li>
+<li><a href="https://strath.zoom.us/j/84160178271">https://strath.zoom.us/j/84160178271</a></li>
 
 </ul></li>
 
@@ -582,8 +582,8 @@ whole.
 </section>
 </section>
 <section>
-<section id="slide-org73371a7">
-<h2 id="org73371a7">Additional resources</h2>
+<section id="slide-orgd096ebf">
+<h2 id="orgd096ebf">Additional resources</h2>
 <ul>
 <li>Books:
 <ul>
@@ -642,8 +642,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-org78c1b30">
-<h2 id="org78c1b30">Questions?</h2>
+<section id="slide-org345de75">
+<h2 id="org345de75">Questions?</h2>
 <p>
 If you have any questions, please post to the class forum on Myplace
 or email me at leo.lue@strath.ac.uk.
